--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/stack": "^6.3.23",
     "@types/react": "~18.2.45",
@@ -17,7 +18,8 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-gesture-handler": "^2.15.0",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-paper": "^5.12.3",
     "styled-components": "^6.1.8",
     "typescript": "^5.3.0"
   },
