--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-gesture-handler": "^2.14.0",
     "react-native-paper": "^5.12.3",
     "styled-components": "^6.1.8",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "expo-location": "~16.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
