--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/stack": "^6.3.23",
     "@types/react": "~18.2.45",
-    "expo": "~50.0.8",
+    "expo": "^50.0.11",
+    "expo-camera": "~14.0.6",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
@@ -22,7 +24,7 @@
     "react-native-paper": "^5.12.3",
     "styled-components": "^6.1.8",
     "typescript": "^5.3.0",
-    "expo-location": "~16.5.5"
+    "lottie-react-native": "6.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
