--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@types/react": "~18.2.45",
     "expo": "^50.0.11",
     "expo-camera": "~14.0.6",
+    "expo-image-picker": "~14.7.1",
     "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
+    "lottie-react-native": "6.5.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-paper": "^5.12.3",
     "styled-components": "^6.1.8",
-    "typescript": "^5.3.0",
-    "lottie-react-native": "6.5.1"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
